--- a/_work/include/header.html
+++ b/_work/include/header.html
@@ -1,3 +1,3 @@
-<a href="/uld/grundlagen3/" style="left: 10px;"><img src="/image/logo.png" height="30px" /></a>
+<a href="{{back}}#{{name}}" style="left: 10px;"><img src="/image/logo.png" height="30px" /></a>
 <div class="title">{{title}}</div>
-<a href="/uld/grundlagen3/" style="right: 10px;"><img src="/image/logo.png" height="30px" /></a>
+<a href="{{back}}#{{name}}" style="right: 10px;"><img src="/image/logo.png" height="30px" /></a>
