--- a/styles.css
+++ b/styles.css
@@ -18,11 +18,15 @@
 h1, h2, h3, h4, h5, h6 {
   position: relative;
   margin: 0;
-  padding: 0px;
-  text-align: center;
-  background: lightblue;
   margin-top: 10px;
+  padding: 0px;
+
+  text-align: center;
   font-weight: bold;
+  background: lightblue;
+
+  white-space: nowrap;
+  overflow: hidden;
 }
 h1 {
   padding: 100px;
@@ -107,6 +111,8 @@ table.tactics div {
   font-size: 20px;
   padding-top: 4px;
   background-color: lightblue;
+  white-space: nowrap;
+  overflow: hidden;
 }
 
 /* --  ------------------------------------------------ */
