new sizing, headers and footers added, u10/u11 basisc splitted

--- a/_work/include/header.html
+++ b/_work/include/header.html
@@ -1,3 +1,6 @@
-<a href="{{back}}#{{name}}" style="left: 10px;"><img src="/image/logo.png" height="30px" /></a>
-<div class="title">{{title}}</div>
-<a href="{{back}}#{{name}}" style="right: 10px;"><img src="/image/logo.png" height="30px" /></a>
+<div class="left">
+<a href="{{back}}#{{name}}"><img src="/image/logo.png"/></a>
+<div>{{title}}</div>
+</div><div class="right">
+<a href="{{back}}#{{name}}"><img src="/image/logo.png"/></a>
+</div>
