--- a/styles.css
+++ b/styles.css
@@ -1,8 +1,8 @@
 /* -- main settings -------------------------------------------------------- */
 *, html, body {
-  margin: 0px;
-  border: 0px none;
-  padding: 0px;
+  margin: 0;
+  border: 0 none;
+  padding: 0;
 
   background: aliceblue;  /* aliceblue #F0F8FF */
 
@@ -11,15 +11,92 @@
   -ms-user-select: none;
   user-select: none;
 
+  color: #111;
   font-family: Arial, Helvetica, sans-serif;
-  font-size: 24px;
+  font-size: 5px;
   text-align: center;
 }
+
+@media (min-width: 700px) and (max-width: 800px) {
+  *, html, body {
+    font-size: 6px;
+  }
+}
+@media (min-width: 800px) and (max-width: 900px) {
+  *, html, body {
+    font-size: 7px;
+  }
+}
+@media (min-width: 900px) and (max-width: 1000px) {
+  *, html, body {
+    font-size: 8px;
+  }
+}
+@media (min-width: 1000px) and (max-width: 1100px) {
+  *, html, body {
+    font-size: 9px;
+  }
+}
+@media (min-width: 1100px) and (max-width: 1200px) {
+  *, html, body {
+    font-size: 10px;
+  }
+}
+@media (min-width: 1200px) and (max-width: 1300px) {
+  *, html, body {
+    font-size: 11px;
+  }
+}
+@media (min-width: 1300px) and (max-width: 1400px) {
+  *, html, body {
+    font-size: 12px;
+  }
+}
+@media (min-width: 1400px) and (max-width: 1500px) {
+  *, html, body {
+    font-size: 13px;
+  }
+}
+@media (min-width: 1500px) and (max-width: 1600px) {
+  *, html, body {
+    font-size: 14px;
+  }
+}
+@media (min-width: 1600px) and (max-width: 1700px) {
+  *, html, body {
+    font-size: 15px;
+  }
+}
+@media (min-width: 1700px) and (max-width: 1800px) {
+  *, html, body {
+    font-size: 16px;
+  }
+}
+@media (min-width: 1800px) and (max-width: 1900px) {
+  *, html, body {
+    font-size: 17px;
+  }
+}
+@media (min-width: 1900px) and (max-width: 2000px) {
+  *, html, body {
+    font-size: 18px;
+  }
+}
+@media (min-width: 2000px) {
+  *, html, body {
+    font-size: 19px;
+  }
+}
+
+body {
+  margin: 13em 0 0 0;
+}
+
 h1, h2, h3, h4, h5, h6 {
   position: relative;
   margin: 0;
-  margin-top: 10px;
-  padding: 0px;
+  margin-bottom: 0.1em;
+  padding: 0;
 
   text-align: center;
   font-weight: bold;
@@ -29,57 +106,59 @@ h1, h2, h3, h4, h5, h6 {
   overflow: hidden;
 }
 h1 {
-  padding: 100px;
-  font-size: 40px;
-}
-/* no any margin for first header */
-h1:first-child, h1:first-of-type {
-  margin: 0;
+  font-size: 5em;
+  padding: 1em;
+  line-height: 150%;
 }
 h2 {
-  font-size: 32px;
-  padding: 50px;
+  font-size: 4em;
+  padding: 1em;
 }
 h3 {
-  font-size: 24px;
-  padding: 30px;
+  font-size: 3em;
+  padding: 1em;
 }
 h4 {
-  font-size: 20px;
-  padding: 20px;
+  font-size: 2.5em;
+  padding: 0.8em;
 }
 h5 {
-  font-size: 17px;
-  padding: 14px;
+  font-size: 2em;
+  padding: 0.8em;
 }
 h6 {
-  font-size: 14px;
-  padding: 8px;
+  font-size: 1.5em;
+  padding: 0.6em;
 }
 a {
-  color: black;
+  color: #111;
   text-decoration: none;
 }
 
 /* -- tactics overview ----------------------------------------------------- */
 h1.tactics {
-  padding: 10px;
-  font-size: 36px;
+  padding: 0.2em;
   text-align: center;
 }
 
 table.tactics {
   margin: auto auto 40px auto;
+  margin: auto auto 2em auto;
 }
 table.tactics img {
-  width: 250px;
+  /* width: 250px; */
+  width: 100%;
 }
 table.tactics td {
-  padding: 15px 15px 0 15px;
+  /* padding: 15px 15px 0 15px; */
+  padding: 1em 1em 0 1em;
+  width: 31em;
+  max-width: 31em;
 }
 table.tactics div {
-  position: relative;
-  width: 250px;
+  /* position: relative; */
+  /* width: 250px; */
+  font-size: 2.5em;
 }
 
 /* -- header --------------------------------------------------------------- */
@@ -89,30 +168,91 @@ table.tactics div {
   top: 0;
   left: 0;
   width: 100%;
-  height: 50px;
-  padding: 10px;
+  height: 10em;
 
   background-color: lightblue;
-  font-size: 30px;
-  font-weight: bold;
-}
-#header > a {
-  position: absolute;
-  top: 6px;
-  border: 4px solid whitesmoke;
-  height: 30px;
-}
-#header > .title {
-  position: absolute;
-  left: 120px;
-  right: 120px;
-  height: 26px;
+
   text-align: left;
-  font-size: 20px;
-  padding-top: 4px;
-  background-color: lightblue;
   white-space: nowrap;
   overflow: hidden;
+}
+#header > div.left {
+  display: inline-block;
+  position: absolute;
+  left: 0;
+  background-color: lightblue;
+}
+#header > div.right {
+  display: inline-block;
+  position: absolute;
+  right: 0;
+  background-color: lightblue;
+}
+#header > div > a {
+  position: relative;
+  display: inline-block;
+  height: 10em;
+  padding: 1em;
+  box-sizing: border-box;
+  background-color: lightblue;
+}
+#header > div > a > img {
+  height: 8em;
+}
+#header > div > div {
+  position: relative;
+  display: inline-block;
+
+  white-space: nowrap;
+  overflow: hidden;
+
+  font-size: 7em;
+  line-height: 112%;
+  font-weight: bold;
+  background-color: lightblue;
+}
+
+/* -- footer --------------------------------------------------------------- */
+#footer {
+  box-sizing: border-box;
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  height: 1.5em;
+  padding: 0.2em;
+  overflow: hidden;
+
+  background-color: lightblue;
+  font-size: 2.5em;
+  font-weight: bold;
+  text-align: left;
+}
+#footer > div {
+  box-sizing: border-box;
+  position: absolute;
+  top: 0;
+  right: 0;
+  height: 1.5em;
+  padding: 0.2em;
+
+  background-color: inherit;
+  font-size: 1em;
+  font-weight: bold;
+}
+
+/* -- content -------------------------------------------------------------- */
+div#content_container {
+  position: absolute;
+  left: 1em;
+  top: 11em;
+  right: 1em;
+  min-width: 10em;
+  bottom: 4.8em;
+  padding: 1em 0;
+  overflow: auto;
+  text-align: left;
+  box-sizing: border-box;
 }
 
 /* --  ------------------------------------------------ */
