styling of ov triangles

--- a/elements/expander/styles.css
+++ b/elements/expander/styles.css
@@ -2,7 +2,7 @@
 div.expander {
   position: absolute;
   top: 50%;
-  right: 20px;
+  right: 3.5em;
 
   width: 0;
   height: 0;
@@ -16,50 +16,26 @@ div.expander {
   cursor: pointer;
 }
 
-h1.expandable div.expander {
-  margin-top: -15px;
-  border-left: 25px solid transparent;
-  border-right: 25px solid transparent;
-  border-top: 30px solid blue;
+h1.expandable div.expander, h2.expandable div.expander {
+  margin-top: -1em;
+  border-left: 2em solid transparent;
+  border-right: 2em solid transparent;
+  border-top: 2em solid blue;
 }
-h1.expandable.up div.expander {
+h1.expandable.up div.expander, h2.expandable.up div.expander {
   border-top: 0 none;
-  border-bottom: 30px solid blue;
+  border-bottom: 2em solid blue;
 }
 
-h2.expandable div.expander {
-  margin-top: -9px;
-  border-left: 15px solid transparent;
-  border-right: 15px solid transparent;
-  border-top: 18px solid blue;
+h3.expandable div.expander, h4.expandable div.expander, h5.expandable div.expander {
+  margin-top: -0.5em;
+  border-left: 1em solid transparent;
+  border-right: 1em solid transparent;
+  border-top: 1em solid blue;
 }
-h2.expandable.up div.expander {
+h3.expandable.up div.expander, h4.expandable.up div.expander, h5.expandable.up div.expander {
   border-top: 0 none;
-  border-bottom: 18px solid blue;
-}
-
-/* TODO h3 */
-
-h4.expandable div.expander {
-  margin-top: -9px;
-  border-left: 15px solid transparent;
-  border-right: 15px solid transparent;
-  border-top: 18px solid blue;
-}
-h4.expandable.up div.expander {
-  border-top: 0 none;
-  border-bottom: 18px solid blue;
-}
-
-h5.expandable div.expander {
-  margin-top: -9px;
-  border-left: 15px solid transparent;
-  border-right: 15px solid transparent;
-  border-top: 18px solid blue;
-}
-h5.expandable.up div.expander {
-  border-top: 0 none;
-  border-bottom: 18px solid blue;
+  border-bottom: 1em solid blue;
 }
 
 /* TODO h6 */
@@ -68,14 +44,14 @@ a h1::after {
   content: ' ';
   position: absolute;
   top: 50%;
-  right: 20px;
-  margin-top: -25px;
+  right: 3.5em;
+  margin-top: -1em;
 
   width: 0;
   height: 0;
-  border-top: 25px solid transparent;
-  border-left: 30px solid blue;
-  border-bottom: 25px solid transparent;
+  border-top: 2em solid transparent;
+  border-left: 2em solid blue;
+  border-bottom: 2em solid transparent;
 
   overflow: hidden;
   background-color: transparent;
@@ -85,14 +61,14 @@ a h3::after {
   content: ' ';
   position: absolute;
   top: 50%;
-  right: 20px;
-  margin-top: -14px;
+  right: 1.4em;
+  margin-top: -0.5em;
 
   width: 0;
   height: 0;
-  border-top: 15px solid transparent;
-  border-left: 18px solid blue;
-  border-bottom: 15px solid transparent;
+  border-top: 0.5em solid transparent;
+  border-left: 0.5em solid blue;
+  border-bottom: 0.5em solid transparent;
 
   overflow: hidden;
   background-color: transparent;
