--- a/styles.css
+++ b/styles.css
@@ -174,6 +174,7 @@ table.tactics div {
 }
 #header > div > a > img {
   height: 8em;
+  width: auto;
 }
 #header > div > div {
   position: relative;
