footer for overviewes

--- a/_work/ovsvg/templates/main.html
+++ b/_work/ovsvg/templates/main.html
@@ -8,6 +8,7 @@
 </head>
 <body>
   <div id="header">{include{header}}</div>
-  {{block}}
+  <div id="content_container">{{block}}</div>
+  <div id="footer">{include{footer}}</div>
 </body>
 </html>
