--- a/_work/include/header.html
+++ b/_work/include/header.html
@@ -1,6 +1,6 @@
 <div class="left">
-<a href="{{back}}#{{name}}"><img src="/image/logo.png"/></a>
+<a href="{{back}}#{{name}}"><img src="/image/bhv1.gif"/></a>
 <div>{{title}}</div>
 </div><div class="right">
-<a href="{{back}}#{{name}}"><img src="/image/logo.png"/></a>
+<a href="{{back}}#{{name}}"><img src="/image/bhv1.gif"/></a>
 </div>
