--- a/_work/ovsvg/templates/table.html
+++ b/_work/ovsvg/templates/table.html
@@ -1,3 +1,4 @@
+<div style="overflow-x: auto;">
 <table class="tactics" align="center" cellspacing="0" cellpadding="10">
   <tr>
     {{tableheader}}
@@ -6,3 +7,4 @@
     {{tableimage}}
   </tr>
 </table>
+</div>
