--- a/_work/ovsvg/templates/table2.html
+++ b/_work/ovsvg/templates/table2.html
@@ -1,3 +1,4 @@
+<div style="overflow-x: auto;">
 <table class="tactics" align="center" cellspacing="0" cellpadding="10">
   <tr>
     {{tableheader}}
@@ -9,3 +10,4 @@
     {{tableinfo}}
   </tr>
 </table>
+</div>
