--- a/_work/include/animation.html
+++ b/_work/include/animation.html
@@ -1,5 +1,6 @@
-<div class="animation_cmds">
+<div class="animation_cmds no_anim no_menu">
   <div class="play"><div>&nbsp;</div></div>
   <div class="pause"><div>&nbsp;</div></div>
   <div class="stop"><div>&nbsp;</div></div>
+  <div class="menu"><div class="d1">&nbsp;</div><div class="d2">&nbsp;</div></div>
 </div>
