--- a/_work/ovsvg/templates/tableimage.html
+++ b/_work/ovsvg/templates/tableimage.html
@@ -1,1 +1,1 @@
-<td><a href="{{target}}"><img src="{{image}}" alt="{{title}}"></a></td>
+<td><a href="{{target}}"><img src="{{image}}" alt="{{alt:title}}"></a></td>
