--- a/_work/ovsvg/templates/block.html
+++ b/_work/ovsvg/templates/block.html
@@ -1,2 +1,4 @@
-<h1 class="tactics">{{title}}</h1>
-{{table}}{{table2}}
+<h1 id="{{id}}" class="tactics expandable">{{title}}</h1>
+<div id="{{id}}_2" class="expanded_container">
+  {{table}}{{table2}}
+</div>
