--- a/_work/ovsvg/templates/block2.html
+++ b/_work/ovsvg/templates/block2.html
@@ -1,4 +1,4 @@
 <h1 id="{{id}}" class="tactics expandable">{{title}}</h1>
 <div id="{{id}}_2" class="expanded_container">
-  {{table}}
+  {{block2b}}
 </div>
