--- a/_work/ovsvg/templates/main.html
+++ b/_work/ovsvg/templates/main.html
@@ -4,7 +4,14 @@
   <meta charset="UTF-8">
   <title>Brückl hotvolleys</title>
   <link rel="stylesheet" href="/styles.css">
+  <link rel="stylesheet" href="/elements/expander/styles.css">
+<style>
+a h3::after {
+  opacity: 0;
+}
+</style>
   <link rel="shortcut icon" href="/favicons/favicon.ico">
+  <script src="/elements/expander/script.js"></script>
   <script src="/script/code.js"></script>
   <script>
 function init() {
@@ -16,6 +23,9 @@ function init() {
       loader.style.display = 'none';
       cont.style.display = 'block';
     }
+
+    window.bhv.elements.expander.initOV(); // (expanders, keepOpen);
+
   } else {
     cont.parentNode.removeChild(cont);
   }
@@ -25,7 +35,7 @@ function init() {
 <body onload="init();">
   <div id="header">{include{header}}</div>
   <div id="loader">Loading...</div>
-  <div id="content_container" class="locked">{{block}}</div>
+  <div id="content_container" class="locked">{{block2}}{{block}}</div>
   <div id="footer">{include{footer}}</div>
 </body>
 </html>
